--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "angular": "~1.4.8",
+    "angular-ui-bootstrap": "~0.14.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -22,5 +24,7 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
